# my-axum-template

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  envoy.yaml
macro_derive/: Cargo.toml
macro_derive/src/: lib.rs
src/: main.rs
src/apps/: mod.rs
src/apps/app/: mod.rs
src/apps/app/system/: model.rs  view.rs
src/apps/app/test_utils/: control.rs  model.rs  view.rs
src/apps/app/user/: control.rs  mod.rs  model.rs  view.rs
src/migrations/: User.sql
utils/: Cargo.toml
utils/src/libs/: mod.rs
utils/src/libs/db/: database.rs  model.rs
utils/src/libs/email/: mail.rs  mod.rs  model.rs
utils/src/libs/extension/: mod.rs
utils/src/libs/extract/: mod.rs
utils/src/libs/global/: mod.rs
utils/src/libs/jwt/: mod.rs
utils/src/libs/lru_k/: mod.rs
utils/src/libs/mongo/: mod.rs
utils/src/libs/rc/: mod.rs
utils/src/libs/redis/: mod.rs
utils/src/libs/response/: mod.rs
utils/src/libs/tracing/: mod.rs
