[package]
name = "my-axum-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.17", features = ["headers", "multipart", "ws"]} 
tokio = { version = "1.20.0", features = ["full"]}
futures = "0.3.24"
utils = { path = "./utils" }
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
lazy_static = "1.4.0"
dotenv = { git = "https://github.com/a1945472906/dotenv.git", branch = "master" }
envy = "0.4.2"
jsonwebtoken = "8.0"
once_cell = "1.9.0"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "any", "postgres","chrono"] }
headers = "0.3.7"
http = "0.2.8"
lettre = { version = "0.10.1", features = ["tokio1","tokio1-native-tls"] }
maud = "0.23.0"
chrono = "0.4"
bytes = "1.2.1"
mime = "0.3.16"
multer = "2.0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
tracing-opentelemetry = "0.18"
axum-tracing-opentelemetry = { version="0.5.2", features=["otlp"] }
macro_derive = { path = "./macro_derive"}
tower-http = { version = "0.3.0", features = ["trace"] }
tower = "0.4"
[workspace]
members = [
    "utils",
]

[profile.dev.package.sqlx-macros]
opt-level = 3