[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "any", "postgres","chrono"] }
once_cell = "1.9.0"
dotenv = { git = "https://github.com/a1945472906/dotenv.git", branch = "master" }
axum = { version = "0.5.17", features = ["headers", "multipart", "ws"]} 
serde_json = "1.0.82"
lettre = { version = "0.10.1", features = ["tokio1","tokio1-native-tls"] }
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.20.0", features = ["full"]}
jsonwebtoken = "8.0"
headers = "0.3.7"
bytes = "1.2.1"
http = "0.2.8"
multer = "2.0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
deadpool-redis = { version = "0.10.2", features = ["rt_tokio_1"] }