[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "postgres","chrono"] }
async-trait = "0.1.58"
once_cell = "1.16.0"
dotenv = { git = "https://github.com/a1945472906/dotenv.git", branch = "master" }
axum = { version = "0.6.1", features = ["headers", "multipart", "ws"]} 
serde_json = "1.0.89"
lettre = { version = "0.10.1", features = ["tokio1","tokio1-native-tls"] }
serde = { version = "1.0.148", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"]}
jsonwebtoken = "8.1.1"
headers = "0.3.8"
bytes = "1.2.1"
http = "0.2.8"
multer = "2.0.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
  "env-filter",
  "fmt",
  "json",
] }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
deadpool-redis = { version = "0.11.0", features = ["rt_tokio_1"] }
redis = { version = "0.22.1", features = ["r2d2"] }
r2d2 = "0.8.10"
mongodb="2.3.1"
tower-http = { version = "0.3.4", features = ["limit", "trace"] }
tower-layer = "0.3.2"